--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "av.webpack.configuration",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint .",
+    "eslint:fix": "eslint --fix ."
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,10 @@
   "devDependencies": {
     "@types/node": "^22.10.7",
     "@types/webpack": "^5.28.5",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-perfectionist": "^4.7.0",
+    "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "prettier": "^3.4.2",
     "ts-loader": "^9.5.2",
@@ -19,5 +25,9 @@
     "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "@types/react": "^19.0.7",
+    "react": "^19.0.0"
   }
 }
